Fix/pma 3090 search (#1382)
* fix(client): PMA-3090
